CI: Only do doxygen on windows

--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -99,10 +99,7 @@ jobs:
       shell: bash
       if: runner.os == 'macOS'
       run: |
-        brew install ninja doxygen
-        brew install basictex --cask
-        eval "$(/usr/libexec/path_helper)"
-        echo "$(dirname $(which latex))" >> $GITHUB_PATH
+        brew install ninja 
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
@@ -152,12 +149,14 @@ jobs:
         path: ${{ matrix.artifact }}
 
     - name: Upload doxygen
+      if: runner.os != 'Windows'
       uses: actions/upload-artifact@v2
       with:
         name: inviwo-cpp-api
         path: build/docs/inviwo/html/*
 
     - name: Upload shpinx
+      if: runner.os != 'Windows'
       uses: actions/upload-artifact@v2
       with:
         name: inviwo-python-api
