--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -88,12 +88,15 @@ jobs:
         -username "inviwo"
         -password "${{ secrets.GITHUB_TOKEN }}"
 
-    - name: Install Apt
+    - name: Install Apt, switch to gcc-11
       shell: bash
       if: runner.os == 'Linux'
       run: |
         sudo apt install libxinerama-dev libxcursor-dev xorg-dev libglu1-mesa-dev libglew-dev ninja-build doxygen-latex
-      
+        sudo apt install gcc-11 g++-11
+        sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-11 110 --slave /usr/bin/g++ g++ /usr/bin/g++-11 --slave /usr/bin/gcov gcov /usr/bin/gcov-11
+        sudo update-alternatives --set gcc /usr/bin/gcc-11
+  
     - name: Install Brew
       shell: bash
       if: runner.os == 'macOS'
