CI: workflow renaming

--- a/.github/workflows/update-win-latest-release.yml
+++ b/.github/workflows/update-win-latest-release.yml
@@ -3,7 +3,7 @@ name: Update Win Latest Relase
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: [Test Win Installer]
+    workflows: [Test Installer]
     types: 
       - completed
 
