--- a/modules/base/CMakeLists.txt
+++ b/modules/base/CMakeLists.txt
@@ -88,6 +88,7 @@ set(HEADER_FILES
     include/modules/base/processors/randommeshgenerator.h
     include/modules/base/processors/randomspheregenerator.h
     include/modules/base/processors/singlevoxel.h
+    # include/modules/base/processors/spatialsamplertovolume.h
     include/modules/base/processors/spotlightsourceprocessor.h
     include/modules/base/processors/stereocamerasyncer.h
     include/modules/base/processors/surfaceextractionprocessor.h
@@ -211,6 +212,7 @@ set(SOURCE_FILES
     src/processors/randommeshgenerator.cpp
     src/processors/randomspheregenerator.cpp
     src/processors/singlevoxel.cpp
+    # src/processors/spatialsamplertovolume.cpp
     src/processors/spotlightsourceprocessor.cpp
     src/processors/stereocamerasyncer.cpp
     src/processors/surfaceextractionprocessor.cpp
