--- a/modules/vectorfieldvisualization/CMakeLists.txt
+++ b/modules/vectorfieldvisualization/CMakeLists.txt
@@ -30,9 +30,12 @@ set(HEADER_FILES
     include/modules/vectorfieldvisualization/processors/integrallinevectortomesh.h
     include/modules/vectorfieldvisualization/processors/linesfromdataframe.h
     include/modules/vectorfieldvisualization/processors/linesourceascii.h
+    include/modules/vectorfieldvisualization/processors/perpendicularsimilarity.h
+    include/modules/vectorfieldvisualization/processors/scalarconvolutionprocessor.h
     include/modules/vectorfieldvisualization/processors/seed3dto4d.h
     include/modules/vectorfieldvisualization/processors/seedsfrommasksequence.h
     include/modules/vectorfieldvisualization/processors/seedsfrommesh.h
+    include/modules/vectorfieldvisualization/processors/streamlinepathways.h
     include/modules/vectorfieldvisualization/processors/unsteadyvolumetospatialsampler.h
     include/modules/vectorfieldvisualization/properties/integrallineproperties.h
     include/modules/vectorfieldvisualization/properties/pathlineproperties.h
@@ -69,9 +72,12 @@ set(SOURCE_FILES
     src/processors/integrallinevectortomesh.cpp
     src/processors/linesfromdataframe.cpp
     src/processors/linesourceascii.cpp
+    src/processors/perpendicularsimilarity.cpp
+    src/processors/scalarconvolutionprocessor.cpp
     src/processors/seed3dto4d.cpp
     src/processors/seedsfrommasksequence.cpp
     src/processors/seedsfrommesh.cpp
+    src/processors/streamlinepathways.cpp
     src/processors/unsteadyvolumetospatialsampler.cpp
     src/properties/integrallineproperties.cpp
     src/properties/pathlineproperties.cpp
