CMake: Deprecate ivw_qt_add_to_install and ivw_default_install_comp_targets
xxxdeployqt will take care of copying plugins so ivw_qt_add_to_install is not needed anymore.

--- a/apps/inviwopyapp/CMakeLists.txt
+++ b/apps/inviwopyapp/CMakeLists.txt
@@ -53,6 +53,6 @@ target_compile_definitions(inviwopyapp PUBLIC
 # Move to folder
 ivw_folder(inviwopyapp minimals)
 # Add application to pack
-ivw_default_install_comp_targets(qt_app inviwopyapp)
+ivw_default_install_targets(inviwopyapp)
 
 set_property(GLOBAL APPEND PROPERTY IVW_PYAPP_LIST inviwopyapp)
