--- a/modules/openglqt/CMakeLists.txt
+++ b/modules/openglqt/CMakeLists.txt
@@ -76,8 +76,4 @@ target_compile_definitions(inviwo-module-openglqt PUBLIC
 ivw_deploy_qt(inviwo-module-openglqt)
 
 ivw_make_package(InviwoOpenGLQtModule inviwo-module-openglqt)
-if(QT_VERSION_MAJOR EQUAL 6)
-    ivw_qt_add_to_install(qt_modules Qt6OpenGL Qt6OpenGLWidgets)
-else()
-    ivw_qt_add_to_install(qt_modules Qt5OpenGL)
-endif()
+ivw_default_install_targets(inviwo-module-openglqt)
