Packaging: windeployqt test fix

--- a/cmake/deploy-windows.cmake.in
+++ b/cmake/deploy-windows.cmake.in
@@ -1,7 +1,6 @@
 set(WINDEPLOYQT "@WINDEPLOYQT@")
-set(IVW_PACKAGE_SELECT_APP "@IVW_PACKAGE_SELECT_APP@")
 
-set(APP_PATH "${CPACK_TEMPORARY_INSTALL_DIRECTORY}/bin/${IVW_PACKAGE_SELECT_APP}.exe")
+set(APP_PATH "${CPACK_TEMPORARY_INSTALL_DIRECTORY}/bin")
 set(COMMAND_ARGS
     ${WINDEPLOYQT}
     ${APP_PATH}
