--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -30,13 +30,13 @@ jobs:
             targets: 'all package'
             installer: 'inviwo-installer-macos'
             artifact: 'build/Inviwo-v*.dmg'
-          # - os: 'ubuntu-20.04'
-          #   triplet: 'x64-linux'
-          #   mono: 'mono'
-          #   cmake: '--preset ninja-dev-vcpkg -DIVW_USE_SIGAR=OFF -DIVW_MODULE_HDF5=OFF' 
-          #   targets: 'all package'
-          #   installer: 'inviwo-installer-ubuntu'
-          #   artifact: 'build/inviwo-v*.zip'
+          - os: 'ubuntu-20.04'
+            triplet: 'x64-linux'
+            mono: 'mono'
+            cmake: '--preset ninja-dev-vcpkg -DIVW_USE_SIGAR=OFF -DIVW_MODULE_HDF5=OFF' 
+            targets: 'all package'
+            installer: 'inviwo-installer-ubuntu'
+            artifact: 'build/inviwo-v*.zip'
       fail-fast: false
       
     runs-on: ${{ matrix.os }}
