--- a/modules/python3/CMakeLists.txt
+++ b/modules/python3/CMakeLists.txt
@@ -97,53 +97,61 @@ endif()
 option(IVW_PACKAGE_EMBED_PYTHON "Embed a python dist in the installer.\ 
  Otherwise a existing python installation is needed to run inviwo" ON)
 if(BUILD_SHARED_LIBS AND IVW_PACKAGE_EMBED_PYTHON)
-    if(WIN32)
-        if(IVW_CFG_CMAKE_DEBUG)
-            set(show SHOW_PROGRESS)
-        else()
-            set(show "")
-        endif()
-
-        set(py_version "${Python3_VERSION_MAJOR}.${Python3_VERSION_MINOR}.${Python3_VERSION_PATCH}")
-        set(py_url "https://www.python.org/ftp/python/${py_version}/python-${py_version}-embed-amd64.zip")
-        set(py_dir "${CMAKE_BINARY_DIR}/py_embedd")
-        set(py_file "${py_dir}/py_embedd.${py_version}.zip")
-        if(NOT EXISTS "${py_file}")
-            ivw_debug_message(STATUS "Download ${py_url}")
-            file(DOWNLOAD ${py_url} ${py_file} STATUS py_status ${show} LOG get_py_log)
-            list(GET py_status 0 py_success)
-            if(NOT py_success EQUAL 0)
-                message(FATAL_ERROR "Could not download python embedd: '${py_url}':\n${get_py_log}")
-            endif()
-        endif()
-
-        file(MAKE_DIRECTORY "${py_dir}/python")
-        execute_process(COMMAND ${CMAKE_COMMAND} -E tar "xf" ${py_file}
-                        WORKING_DIRECTORY "${py_dir}/python")
-        file(APPEND ${py_dir}/python/python${Python3_VERSION_MAJOR}${Python3_VERSION_MINOR}._pth 
-            "import site")
-
-        set(pip_file "${py_dir}/python/get-pip.py")
-        if(NOT EXISTS "${pip_file}")
-            set(pip_url "https://bootstrap.pypa.io/get-pip.py")
-            ivw_debug_message(STATUS "Download ${pip_url}")
-            file(DOWNLOAD "${pip_url}" "${pip_file}" 
-                 STATUS pip_status ${show} LOG get_pip_log)
-            if(NOT pip_status EQUAL 0)
-                file(REMOVE "${pip_file}")
-                message(FATAL_ERROR "Could not download '${pip_url}':\n ${get_pip_log}")
-            endif()
-        endif()
-
-        if(NOT EXISTS ${py_dir}/python/Scripts)
-            execute_process(COMMAND ${py_dir}/python/python.exe -I get-pip.py --no-warn-script-location 
-                WORKING_DIRECTORY "${py_dir}/python")
-            execute_process(COMMAND ${py_dir}/python/python.exe -I -m pip install numpy --isolated --no-warn-script-location 
-                WORKING_DIRECTORY "${py_dir}/python")
-        endif()
-
-        install(DIRECTORY "${py_dir}/python/" DESTINATION bin COMPONENT Application)
+    if(IVW_CFG_CMAKE_DEBUG)
+        set(show SHOW_PROGRESS)
+    else()
+        set(show "")
     endif()
+
+    set(py_version "${Python3_VERSION_MAJOR}.${Python3_VERSION_MINOR}.${Python3_VERSION_PATCH}")
+    set(py_dir "${CMAKE_BINARY_DIR}/py_embedd")
+    if(WIN32)
+        set(py_url "https://www.python.org/ftp/python/${py_version}/python-${py_version}-embed-amd64.zip")
+        set(py_file "${py_dir}/py_embedd.${py_version}.zip")
+    elseif(APPLE)
+        set(py_url "https://www.python.org/ftp/python/${py_version}/python-${py_version}-macos11.pkg")
+        set(py_file "${py_dir}/py_embedd.${py_version}.pkg")
+    else()
+        set(py_url "https://www.python.org/ftp/python/${py_version}/Python-${py_version}.tgz")
+        set(py_file "${py_dir}/py_embedd.${py_version}.tgz")
+    endif()
+    
+    if(NOT EXISTS "${py_file}")
+        ivw_debug_message(STATUS "Download ${py_url}")
+        file(DOWNLOAD ${py_url} ${py_file} STATUS py_status ${show} LOG get_py_log)
+        list(GET py_status 0 py_success)
+        if(NOT py_success EQUAL 0)
+            message(FATAL_ERROR "Could not download python embedd: '${py_url}':\n${get_py_log}")
+        endif()
+    endif()
+
+    file(MAKE_DIRECTORY "${py_dir}/python")
+    execute_process(COMMAND ${CMAKE_COMMAND} -E tar "xf" ${py_file}
+                    WORKING_DIRECTORY "${py_dir}/python")
+    file(APPEND ${py_dir}/python/python${Python3_VERSION_MAJOR}${Python3_VERSION_MINOR}._pth 
+        "import site")
+
+    set(pip_file "${py_dir}/python/get-pip.py")
+    if(NOT EXISTS "${pip_file}")
+        set(pip_url "https://bootstrap.pypa.io/get-pip.py")
+        ivw_debug_message(STATUS "Download ${pip_url}")
+        file(DOWNLOAD "${pip_url}" "${pip_file}" 
+                STATUS pip_status ${show} LOG get_pip_log)
+        if(NOT pip_status EQUAL 0)
+            file(REMOVE "${pip_file}")
+            message(FATAL_ERROR "Could not download '${pip_url}':\n ${get_pip_log}")
+        endif()
+    endif()
+    set(PYTHON_EXECUTABLE ${py_dir}/python/python${CMAKE_EXECUTABLE_SUFFIX})
+
+    if(NOT EXISTS ${py_dir}/python/Scripts)
+        execute_process(COMMAND ${PYTHON_EXECUTABLE} -I get-pip.py --no-warn-script-location 
+            WORKING_DIRECTORY "${py_dir}/python")
+        execute_process(COMMAND ${PYTHON_EXECUTABLE} -I -m pip install numpy --isolated --no-warn-script-location 
+            WORKING_DIRECTORY "${py_dir}/python")
+    endif()
+
+    install(DIRECTORY "${py_dir}/python/" DESTINATION ${IVW_RUNTIME_INSTALL_DIR} COMPONENT Application)
 endif()
 
 # Add scripts directory to pack
