--- a/cmake/deploy-linux.cmake.in
+++ b/cmake/deploy-linux.cmake.in
@@ -3,18 +3,17 @@ set(IVW_PACKAGE_SELECT_APP "@IVW_PACKAGE_SELECT_APP@")
 # First download and install LinuxDeployQt
 # See https://github.com/probonopd/linuxdeployqt#using-linuxdeployqt-with-travis-ci
 set(LINUXDEPLOYQT_URL "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage")
-set(LINUXDEPLOYQT_APPIMAGE ${CMAKE_CURRENT_BINARY_DIR}/linuxdeployqt-continuous-x86_64.AppImage)
-set(LINUXDEPLOYQT ${CMAKE_CURRENT_BINARY_DIR}/linuxdeployqt/AppRun)
+set(LINUXDEPLOYQT ${CMAKE_CURRENT_BINARY_DIR}/linuxdeployqt-continuous-x86_64.AppImage)
 
-add_custom_command(
-    OUTPUT
-        ${LINUXDEPLOYQT}
-    COMMAND
-        wget ${LINUXDEPLOYQT_URL}
-    COMMAND
-        chmod a+x ${LINUXDEPLOYQT_APPIMAGE}
-    COMMAND
-        ${LINUXDEPLOYQT_APPIMAGE} --appimage-extract)
+execute_process(COMMAND wget --no-clobber ${LINUXDEPLOYQT_URL} 
+                COMMAND chmod a+x ${LINUXDEPLOYQT} 
+                RESULT_VARIABLE EXIT_CODE
+) 
+        
+if(NOT EXIT_CODE EQUAL 0)   
+    message(FATAL_ERROR
+        \"Running ${COMMAND_ARGS} failed with exit code \${EXIT_CODE}.\")
+endif()     
 
 # Run LinuxDeployQt
 set(APP_BUNDLE_PATH "${CPACK_TEMPORARY_INSTALL_DIRECTORY}/share/applications/${IVW_PACKAGE_SELECT_APP}.desktop")
