Packaging: linux command order fix

--- a/cmake/deploy-linux.cmake.in
+++ b/cmake/deploy-linux.cmake.in
@@ -5,8 +5,8 @@ set(IVW_PACKAGE_SELECT_APP "@IVW_PACKAGE_SELECT_APP@")
 set(LINUXDEPLOYQT_URL "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage")
 set(LINUXDEPLOYQT ${CMAKE_CURRENT_BINARY_DIR}/linuxdeployqt-continuous-x86_64.AppImage)
 
-execute_process(COMMAND wget --no-clobber ${LINUXDEPLOYQT_URL} 
-                COMMAND chmod a+x ${LINUXDEPLOYQT} 
+execute_process(COMMAND wget --no-clobber --no-verbose ${LINUXDEPLOYQT_URL})
+execute_process(COMMAND chmod a+x ${LINUXDEPLOYQT} 
                 RESULT_VARIABLE EXIT_CODE
 ) 
         
