--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -86,21 +86,23 @@ jobs:
     - name: 'Bootstrap vcpkg'
       shell: bash
       run: |
-        ${{ matrix.bootstrap_vcpkg }} 
-        ./vcpkg/vcpkg integrate install
+        ${{ matrix.bootstrap_vcpkg }}
 
     # Cache built dependencies for faster subsequent builds
     # ./vcpkg/bootstrap-vcpkg.bat must have been called before
     - name: 'Setup NuGet Credentials'
       shell: bash
-      run: >
-        ${{ matrix.mono }} `vcpkg fetch nuget | tail -n 1`
-        sources add
+      run: |
+        ${{ matrix.mono }} `vcpkg fetch nuget | tail -n 1` \
+        sources add \
+        -source "https://nuget.pkg.github.com/inviwo/index.json" \
+        -storepasswordincleartext \
+        -name "GitHub" \
+        -username "inviwo" \
+        -password "${{ secrets.GITHUB_TOKEN }}" \
+        ${{ matrix.mono }} `./vcpkg/vcpkg fetch nuget | tail -n 1` \
+        setapikey "${{ secrets.GITHUB_TOKEN }}" \
         -source "https://nuget.pkg.github.com/inviwo/index.json"
-        -storepasswordincleartext
-        -name "GitHub"
-        -username "inviwo"
-        -password "${{ secrets.GITHUB_TOKEN }}"
 
     - name: Apt Install, switch to gcc-11
       shell: bash
