--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -99,7 +99,7 @@ jobs:
         -storepasswordincleartext \
         -name "GitHub" \
         -username "inviwo" \
-        -password "${{ secrets.GITHUB_TOKEN }}" \
+        -password "${{ secrets.GITHUB_TOKEN }}" 
         ${{ matrix.mono }} `./vcpkg/vcpkg fetch nuget | tail -n 1` \
         setapikey "${{ secrets.GITHUB_TOKEN }}" \
         -source "https://nuget.pkg.github.com/inviwo/index.json"
