--- a/modules/volume/CMakeLists.txt
+++ b/modules/volume/CMakeLists.txt
@@ -1,6 +1,7 @@
 ivw_module(Volume)
 
 set(HEADER_FILES
+    include/inviwo/volume/algorithm/volumemap.h
     include/inviwo/volume/processors/volumeregionmap.h
     include/inviwo/volume/processors/volumeregionstatistics.h
     include/inviwo/volume/processors/volumevoronoisegmentation.h
@@ -10,6 +11,7 @@ set(HEADER_FILES
 ivw_group("Header Files" ${HEADER_FILES})
 
 set(SOURCE_FILES
+    src/algorithm/volumemap.cpp
     src/processors/volumeregionmap.cpp
     src/processors/volumeregionstatistics.cpp
     src/processors/volumevoronoisegmentation.cpp
